# Wored

./: .env.example  .env.postgres.example  .gitignore  AGENTS.md  Makefile  README.md  SOUL.md  TASK-DEV-S1-001.md  check_openrouter_balance.py  deep_probe_key.py  docker-compose.yml  hermes.sh  hermes_config_new.yaml  hermes_config_tmp.yaml  hermes_conversation_20260503_004409.json  hermes_conversation_20260503_012808.json  omniroute_models.json  omniroute_models_utf8.json  omniroute_tunnel_models.json  probe_alibaba.py  probe_key.py  probe_key_v2.py  probe_key_v3.py  probe_kiro.py  probe_omniroute_cloud.py  reinstall_hermes.sh  settings.json  skill_mcp_and_tools.md  skill_user_alignment_and_docs.md  test_nim_keys.py  wored.md
hypercube/: .env.example  .gitignore  AGENTS.md  CHANGELOG_WEEKLY.md  Makefile  README.md  alembic.ini  codex-profile.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  от qodo.md
hypercube/accounting/: __init__.py  cost_estimator.py  service.py
hypercube/admin/: __init__.py  service.py
hypercube/alembic/: env.py  script.py.mako
hypercube/app/: health.py  main.py  router.py
hypercube/bot/: __init__.py  errors.py  fsm_states.py  handlers.py  middleware.py
hypercube/context/: __init__.py  handoff.py  service.py
hypercube/core/: bootstrap.py  config.py  db.py  engine.py  enums.py  exceptions.py  logger.py  request_id.py  schemas.py  services.py
hypercube/docker/: Dockerfile  docker-compose.yml
hypercube/docs/: 03-phase3-plan.md  06-final-documentation.md  14-security.md  16-gap-audit.md  17-security-remediation.md  INDEX.md  (+16 more)
(+288 files in other folders)
